--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="toprow row">
             <div class="col-9">
-                <h1 class="display-3"><%=log.date%></h1>
+                <h1 class="display-3 fw-bold"><%=log.date%></h1>
             </div>
             <div class="createbttnhome col-3">
                 <form class="createbttnhome1" action="/log">
