--- a/views/new.ejs
+++ b/views/new.ejs
@@ -15,10 +15,10 @@
 <body>
     <div class="container">
         <div class="toprow row">
-            <div class="col-9">
-                <h1 class="display-3">Create new entry</h1>
+            <div class="col-10">
+                <h1 id="newtitle" class="display-3 fw-bold">Create new entry</h1>
             </div>
-            <div class="createbttnhome col-3">
+            <div class="createbttnhome col-2">
                 <form class="createbttnhome1" action="/log">
                     <input class="btn btn-secondary"  type="submit" value="home">
                 </form>
@@ -39,7 +39,7 @@
             <input id="feelingemoji" type="text" name="feelingemoji">
             <div class="rowtop row">
                 <div class="col form-group">
-                    <lab class="formheading" for="entry">Entry</lab>
+                    <label class="formheading" for="entry">Entry</label>
                     <textarea class="form-control" type="text" name="entry" rows="12"></textarea>
                     <div id="createnew">
                         <input class="btn btn-secondary" type="submit" value="create">
