--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="/script.js"></script>
     <link rel="stylesheet" href="/style.css">
     <title>Document</title>
 </head>
@@ -14,12 +16,18 @@
     <div class="container">
         <div id="indexnav" class="toprow d-flex flex-row">
             <div id="navleft">
-            <h1 class="display-3"> Mental Health Log</h1>
+            <h1 class="display-3 fw-bold"> Mental Health Log</h1>
             </div>
             <div id="navright" class="createbttnhome">
                 <form action="log/new">
                     <input class="btn btn-secondary" type="submit" value="create entry">
                 </form>
+                <div id="colors">
+                    <span id="blue" height="25" width="25"></span>
+                    <span id="orange" height="25" width="25"></span>
+                    <span id="green" height="25" width="25"></span>
+                    <span id="purple" height="25" width="25"></span>
+                </div>
             </div>
         </div>
         <div id="logcontent" class="d-flex flex-row flex-wrap justify-content-evenly align-items-start">
@@ -38,6 +46,7 @@
             </div>
         <% } %>
         </div>
+       
     </div>
 </body>
 </html>
