--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
                 <form action="/log/<%=log[i]._id%>">
                 <button id="indexbox" class="btn btn-secondary d-flex flex-row align-items-center justify-content-evenly p-2">
                     <div id="indextitle" class="d-flex flex-wrap text-center">
-                        <h4 class="indexdisplay display-6"><%=log[i].date%></h4>
+                        <h4 class="indexdisplay"><%=log[i].date%></h4>
                     </div>
                     <div id="indexemoji">
                         <img id="displayemoji" src="<%=log[i].feelingemoji%>" width="50" height="auto">
