--- a/views/new.ejs
+++ b/views/new.ejs
@@ -45,9 +45,9 @@
                         <input class="btn btn-secondary" type="submit" value="create">
                     </div>
                 </div>
-                <div class="col">
+                <div id="howyoufeeling" class="col">
                     <label class="formheading">How are you feeling today?</label>
-                    <div class="row1">
+                    <div id="emojisbox" class="row1">
                         <div id="happybox" class="col col1">
                             <img class="emojicreate" id="happy" src="https://cdn.shopify.com/s/files/1/1061/1924/products/Smiling_Emoji_with_Smiling_Eyes_large.png?v=1571606035">
                             <p>Happy</p>
@@ -89,6 +89,9 @@
                             <p>Hopeful</p>
                         </div>
                     </div>
+                </div>
+                <div id="createnew2">
+                    <input class="btn btn-secondary" type="submit" value="update entry">
                 </div>
             </div>
         </form>
