--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -36,8 +36,8 @@
                     <input class="form-control" type="text" name="emotions" value="<%=log.emotions%>"/>
                 </div>
             </div>
-            <input id="feeling" type="text" name="feeling"/>
-            <input id="feelingemoji" type="text" name="feelingemoji">
+            <input id="feeling" value="<%=log.feeling%>" type="text" name="feeling"/>
+            <input id="feelingemoji" value="<%=log.feelingemoji%>" type="text" name="feelingemoji">
             <div class="rowtop row">
                 <div class="col form-group">
                     <label class="formheading" for="entry">Entry</label>
