--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,12 +22,12 @@
                 <form action="log/new">
                     <input class="btn btn-secondary" type="submit" value="create entry">
                 </form>
-                <div id="colors">
+                <form id="colors">
                     <span id="blue" height="25" width="25"></span>
                     <span id="orange" height="25" width="25"></span>
                     <span id="green" height="25" width="25"></span>
                     <span id="purple" height="25" width="25"></span>
-                </div>
+                </form>
             </div>
         </div>
         <div id="logcontent" class="d-flex flex-row flex-wrap justify-content-evenly align-items-start">
